--- a/resources.html
+++ b/resources.html
@@ -11,13 +11,13 @@
 		<link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity = "sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin = "anonymous">
 		<link rel = "icon" type = "image/x-icon" href = "assets/favicon.ico" />
 		<link href = "css/guide.css" rel = "stylesheet" type = "text/css" />
-		<title > Thebitspud's Webdev Guide </title>
+		<title > Resources - WebDevGuide </title>
 	</head>
 
 	<body>
 		<nav class = "navbar navbar-expand-md navbar-dark bg-dark site-navbar">
 			<a class = "navbar-brand" href = "index.html">
-				<img src = "assets/webdev-logo.png" width = "30" height = "30" class = "d-inline-block align-top" alt = ""> Thebitspud's WebDev Guide
+				<img src = "assets/webdev-logo.png" width = "30" height = "30" class = "d-inline-block align-top" alt = ""> WebDevGuide
 			</a>
 
 			<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar-collapse" aria-controls = "navbar-collapse" aria-expanded = "false" aria-label = "Toggle navigation">
@@ -52,7 +52,7 @@
 
 		<hr>
 		<div class = "text-center mt-5">
-			<h5><a href = "https://github.com/thebitspud/webdevguide" target = "_blank" class = "footer-link-blue">Thebitspud's Webdev Guide 2018/19</a></h5>
+			<h5><a href = "https://github.com/webdevguide/webdevguide.github.io" target = "_blank" class = "footer-link-blue">WebDevGuide 2018/19</a></h5>
 			<a href = "https://thebitspud.github.io" target = "_blank" class = "footer-link-grey pb-5">Site design by Thebitspud</a>
 		</div>
 
